--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,8 @@ jobs:
                                                                     :inga/test/main)
                                                  (uiop:find-symbol* '#:java
                                                                     :inga/test/parser/java)))
+                                                 (uiop:find-symbol* '#:kotlin
+                                                                    :inga/test/parser/kotlin)))
                             (uiop:quit 1))"
 
   test-typescript:
