Add curl to typescript test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         LISP: ${{ matrix.lisp }}
       run: |
         apt-get update
-        apt-get install -y sudo bzip2
+        apt-get install -y curl sudo bzip2
         curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh
     - name: Install fiveam
       run: ros install fiveam
