Revert "Security update for image"
This reverts commit 2a23a2f2db0ccc5c9b66c93714c219793c392f36.

--- a/docker/java/Dockerfile
+++ b/docker/java/Dockerfile
@@ -1,4 +1,4 @@
-FROM fukamachi/roswell:latest-debian AS build
+FROM fukamachi/roswell:21.10.14.111-ubuntu AS build
 
 COPY ../.. /inga
 RUN ros && \
