--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "test/fixtures/nestjs-realworld-example-app-prisma"]
 	path = test/fixtures/nestjs-realworld-example-app-prisma
 	url = git@github.com:seachicken/nestjs-realworld-example-app.git
+[submodule "test/fixtures/spring-tutorials"]
+	path = test/fixtures/spring-tutorials
+	url = git@github.com:seachicken/tutorials.git
