Add dependency-loader module

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,8 @@ jobs:
                                                  (uiop:find-symbol* '#:kotlin
                                                                     :inga/test/ast-analyzer/kotlin)
                                                  (uiop:find-symbol* '#:java
+                                                                    :inga/test/plugin/jvm-dependency-loader)
+                                                 (uiop:find-symbol* '#:java
                                                                     :inga/test/plugin/spring-property)))
                             (uiop:quit 1))"
 
