Add tests to depends-on

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
                                                  (uiop:find-symbol* '#:kotlin
                                                                     :inga/test/ast-analyzer/kotlin)
                                                  (uiop:find-symbol* '#:java
+                                                                    :inga/test/plugin/jvm-helper)
+                                                 (uiop:find-symbol* '#:java
                                                                     :inga/test/plugin/spring-property-loader)))
                             (uiop:quit 1))"
 
