Always build and test the image
Dependent libraries are frequently updated, so always build the image and test accurately to avoid losing compatibility with Lisp.

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -10,14 +10,13 @@ env:
 
 jobs:
   build-and-push-image:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     strategy:
       matrix:
-        target: [typescript, java]
+        target: [java, typescript]
 
     steps:
       - name: Checkout repository
