--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,8 @@ jobs:
                                      (uiop:find-symbol* '#:java
                                                         :inga/test/traversal/spring-java)
                                      (uiop:find-symbol* '#:java
+                                                        :inga/test/traversal/spring-kotlin)
+                                     (uiop:find-symbol* '#:java
                                                         :inga/test/plugin/jvm-helper)
                                      (uiop:find-symbol* '#:java
                                                         :inga/test/plugin/spring-property-loader)))
