Build an image on the local arm

--- a/docker/java/Dockerfile
+++ b/docker/java/Dockerfile
@@ -1,4 +1,7 @@
-FROM fukamachi/roswell:23.10.14.114-alpine AS build
+FROM fukamachi/roswell:23.10.14.114-ubuntu AS build
+
+RUN apt-get update && \
+  apt-get install -y build-essential
 
 COPY ../.. /inga
 RUN ros && \
@@ -21,8 +24,7 @@ ADD https://github.com/seachicken/jvm-dependency-loader/releases/download/v$JVM_
 ADD https://github.com/seachicken/spring-property-loader/releases/download/v$SPRING_PROPERTY_LOADER/spring-property-loader-$SPRING_PROPERTY_LOADER.jar ./libs/spring-property-loader.jar
 
 RUN apt-get update && \
-  apt-get install -y git && \
-  apt-get install -y maven && \
+  apt-get install -y git maven && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/*
 
