--- a/.github/workflows/build-push-for-sync.yml
+++ b/.github/workflows/build-push-for-sync.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
+          push: true
           file: ./docker/sync/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
