Remove rsync from inga image

--- a/docker/java/Dockerfile
+++ b/docker/java/Dockerfile
@@ -24,7 +24,7 @@ ADD https://github.com/seachicken/jvm-dependency-loader/releases/download/v$JVM_
 ADD https://github.com/seachicken/spring-property-loader/releases/download/v$SPRING_PROPERTY_LOADER/spring-property-loader-$SPRING_PROPERTY_LOADER.jar ./libs/spring-property-loader.jar
 
 RUN apt-get update && \
-  apt-get install -y maven rsync && \
+  apt-get install -y maven && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/*
 
