--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, ubuntu-24.04-arm]
-        target: [java, typescript]
+        target: [java-8, java-11, java-17, java-21, typescript]
         include:
           - os: ubuntu-latest
             platform: linux/amd64
@@ -35,8 +35,15 @@ jobs:
     steps:
       - name: Prepare
         run: |
-          platform=${{ matrix.platform }}
-          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+          PLATFORM=${{ matrix.platform }}
+          echo "PLATFORM_PAIR=${PLATFORM//\//-}" >> $GITHUB_ENV
+
+          echo "LANGUAGE=$(echo ${{ matrix.target }} | cut -d'-' -f1)" >> $GITHUB_ENV
+          JAVA_VERSION=$(echo ${{ matrix.target }} | cut -d'-' -f2)
+          if [ -z "$JAVA_VERSION" ]; then
+            JAVA_VERSION="";
+          fi
+          echo "JAVA_VERSION=$JAVA_VERSION" >> $GITHUB_ENV
 
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -66,7 +73,8 @@ jobs:
         with:
           context: .
           platforms: ${{ matrix.platform }}
-          file: ./docker/${{ matrix.target }}/Dockerfile
+          build-args: JAVA_VERSION=${{ env.JAVA_VERSION }}
+          file: ./docker/${{ env.LANGUAGE }}/Dockerfile
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,"name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}",push-by-digest=true,name-canonical=true,push=true
 
@@ -90,7 +98,7 @@ jobs:
       - build
     strategy:
       matrix:
-        target: [java, typescript]
+        target: [java-8, java-11, java-17, java-21, typescript]
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
